tests/baselines/reference/staticClassMemberError.errors.txt
tests/cases/compiler/staticClassMemberError.ts(4,3): error TS2662: Cannot find name 's'. Did you mean the static member 'C.s'?
tests/cases/compiler/staticClassMemberError.ts(9,10): error TS2391: Function implementation is missing or not immediately following the declaration.
tests/cases/compiler/staticClassMemberError.ts(9,10): error TS2814: Function with bodies can only merge with classes that are ambient.
tests/cases/compiler/staticClassMemberError.ts(10,7): error TS2813: Class declaration cannot implement overload list for 'Foo'.


==== tests/cases/compiler/staticClassMemberError.ts (4 errors) ====
    class C {
    	static s;
    	public a() {
    		s = 1;
    		~
!!! error TS2662: Cannot find name 's'. Did you mean the static member 'C.s'?
    	}
    }
    
    // just want to make sure this one doesn't crash the compiler
    function Foo();
             ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
             ~~~
!!! error TS2814: Function with bodies can only merge with classes that are ambient.
!!! related TS6506 tests/cases/compiler/staticClassMemberError.ts:10:7: Consider adding a 'declare' modifier to this class.
    class Foo {
          ~~~
!!! error TS2813: Class declaration cannot implement overload list for 'Foo'.
!!! related TS6506 tests/cases/compiler/staticClassMemberError.ts:10:7: Consider adding a 'declare' modifier to this class.
     static bar;
    }